--- a/l200170104.html
+++ b/l200170104.html
@@ -32,7 +32,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container text-center">
     <h1 class="display-4 ">MUHAMMAD KHOIRUDDIN</h1>
-    <p class="lead">Selamat datang</p>
+    <p class="lead" color="red">Selamat datang</p>
   </div>
 </div>
 
